# baseline-models

./: .gitignore  README.md  mise.toml  models.md  pyproject.toml
CTGAN/: README.md  requirements.txt  utils.py
CTGAN/model/: CTGAN.py
U-TILISE/: .gitignore  Untitled.ipynb  dataset_wrapper.py  demo.ipynb  run_train.py  untitled.txt
U-TILISE/configs/: default_sen12.yaml  demo_train_sen12.yaml
U-TILISE/lib/: config_utils.py  data_utils.py  eval_tools.py  trainer.py  utils.py  visutils.py
U-TILISE/lib/datasets/: EarthNet2021Dataset.py  SEN12MSCRTSDataset.py  __init__.py  mask_generation.py
U-TILISE/lib/models/: ImageSeriesInterpolator.py  __init__.py  ltae_transformer.py  make_layers.py  positional_encoding.py  utilise.py
UnCRtainTS/: ACinterface_main_0515.py  z_unc.sh
UnCRtainTS/data/: SEN12MSCRTS.py  dataloader_v46.py  dataloader_v50.py
UnCRtainTS/model/: misc.py  parse_args.py
UnCRtainTS/model/src/: model_utils.py
UnCRtainTS/model/src/backbones/: base_model.py
adapters/: common.py  ctgan_adapter.py  dataset.py  uncrtaints_adapter.py  utilise_adapter.py
configs/: ctgan.yaml  ctgan_eval.yaml  uncrtaints.yaml  uncrtaints_eval.yaml  utilise.yaml  utilise_eval.yaml
eval/: evaluate.py
scripts/: compress_checkpoints.sh  eval_ctgan.sbatch  eval_uncrtaints.sbatch  eval_utilise.sbatch  submit_all.sh  train_ctgan.sbatch  train_uncrtaints.sbatch  train_utilise.sbatch
train/: train_ctgan.py  train_uncrtaints.py  train_utilise.py
